# Riru-GooglePixel4XLFaker

./: README.md  module.gradle
module/src/main/cpp/: CMakeLists.txt  hook.cpp  main.cpp  riru.c
module/src/main/cpp/include/: hook.h  logging.h  riru.h
